# public-audit-agent

./: .dockerignore  .gitignore  Dockerfile  Makefile  config.yaml  docker-compose.yml  pyproject.toml  requirements.txt
src/: config.py
src/agents/: analyst.py  critic.py  fiscal.py  graph.py  guardrail.py  planner.py
src/etl/: client.py  database.py  main.py
src/etl/collectors/: base.py  despesas.py  licitacoes.py  receitas.py
src/execution/: sandbox.py  shim.py  verify_docker_env.py
src/graph/: workflow.py
src/mcp/: server.py  tcp_server.py
src/prompts/: analyst_system.md  critic_system.md  editor.md  fiscal_check.md  fiscal_generate.md  guardrail_input.md  guardrail_output.md  planner.md
src/prompts/components/: examples.md  identity.md  rules.md
src/schemas/: state.py
src/tools/: database.py
src/utils/: logger.py  parsing.py
